--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -7,5 +7,6 @@
     "allowSyntheticDefaultImports": true,
     "strict": true
   },
-  "include": ["vite.config.ts"]
+  "include": ["src/**/*.ts"],  // Include your TypeScript files
+  "exclude": ["node_modules"]
 }
