--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VITE_KAKAO_REST_API_KEY="312e1dbfd6c9865411b34bbef5a68b9b"
-VITE_KAKAO_REDIRECT_URI="http://localhost:5173/oauth"
+VITE_KAKAO_REDIRECT_URI="https://localhost:5173/mentorbus-frontend/oauth"
