--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_KAKAO_REST_API_KEY="312e1dbfd6c9865411b34bbef5a68b9b"
 VITE_KAKAO_REDIRECT_URI="https://mentor-verse.github.io/mentorbus-frontend/oauth"
+PUBLIC_URL="/mentorbus-frontend"
