fix : 로그인 원상복구

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "useDefineForClassFields": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "target": "ES2020", // 최신 버전을 사용하는지 확인
+    "lib": ["ES2020", "DOM", "DOM.Iterable"], // 필요한 라이브러리를 포함
     "module": "ESNext",
     "skipLibCheck": true,
 
@@ -22,9 +21,7 @@
 
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./src/*"
-      ]
+      "@/*": ["./src/*"]
     }
   },
   "include": ["src"],
