--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "endpoint-client": "^0.1.1",
-    "gh-pages": "^6.1.1",
+    "gh-pages": "6.1.1",
     "next-themes": "^0.3.0",
     "path": "^0.12.7",
     "postcss": "^8.4.39",
