--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "endpoint-client": "^0.1.1",
-    "gh-pages": "6.1.1",
+    "gh-pages": "6.2.0",
     "next-themes": "^0.3.0",
     "path": "^0.12.7",
     "postcss": "^8.4.39",
@@ -49,5 +49,6 @@
     "typescript": "^5.5.4",
     "vite": "^5.3.1",
     "vite-tsconfig-paths": "^4.3.2"
-  }
+  },
+  "packageManager": "yarn@4.5.0+sha512.837566d24eec14ec0f5f1411adb544e892b3454255e61fdef8fd05f3429480102806bac7446bc9daff3896b01ae4b62d00096c7e989f1596f2af10b927532f39"
 }
