--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
+    "react-loading-skeleton": "^3.5.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.24.1",
     "recoil": "^0.7.7",
