--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cookies-next": "^5.1.0",
     "endpoint-client": "^0.1.1",
     "next-themes": "^0.3.0",
     "path": "^0.12.7",
@@ -28,10 +29,12 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
+    "react-icons": "^5.4.0",
     "react-loading-skeleton": "^3.5.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.24.1",
     "recoil": "^0.7.7",
+    "recoil-persist": "^5.1.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss": "^3.4.4",
