initial commit (애플 로그인 테스트 위한 커밋

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ VITE_GOOGLE_SECRET_KEY="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"
 VITE_GOOGLE_SIGNUP_REDIRECT_URI="http://localhost:5175/signup/oauth/google"
 VITE_GOOGLE_LOGIN_REDIRECT_URI="http://localhost:5175/login/oauth/google"
 VITE_GOOGLE_REDIRECT_URI="http://localhost:5175"
-VITE_APPLE_CLIENT_ID="KT796UTYMU.com.app.mentorbus"
+VITE_APPLE_CLIENT_ID="app.mentorbus.mentorbus"
 VITE_APPLE_REDIRECT_URI="https://mentorbus.app/apple/auth"
 PUBLIC_URL="/"
 VITE_API_URL="http://localhost:5002"
