--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
+    "@reduxjs/toolkit": "2.5.1",
     "@tanstack/react-query": "^5.50.1",
     "@types/es6-promise": "^3.3.0",
     "autoprefixer": "^10.4.19",
@@ -32,9 +33,11 @@
     "react-icons": "^5.4.0",
     "react-loading-skeleton": "^3.5.0",
     "react-query": "^3.39.3",
+    "react-redux": "9.2.0",
     "react-router-dom": "^6.24.1",
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
+    "redux": "5.0.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss": "^3.4.4",
