--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VITE_KAKAO_REST_API_KEY="312e1dbfd6c9865411b34bbef5a68b9b"
-VITE_KAKAO_REDIRECT_URI="https://mentorbus.app/oauth"
+VITE_KAKAO_REDIRECT_URI="http://localhost:5175/oauth"
 VITE_KAKAO_NATIVE_APP_KEY="fb9c95700a4b32826fe4b00966b42c60"
 VITE_GOOGLE_CLIENT_ID="600910180647-2qcqdfu4091qllm9u30amt34f5kvuc45.apps.googleusercontent.com"
 VITE_GOOGLE_SECRET_KEY="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"
