--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -20,7 +20,8 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "types": ["vite-plugin-svgr/client"]
   },
-  "include": ["vite.config.ts"]
+  "include": ["vite.config.ts", "svgr.d.ts"]
 }
