--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "gh-pages": "6.2.0",
     "typescript": "^5.5.4",
     "vite": "^5.3.1",
+    "vite-plugin-svgr": "4.3.0",
     "vite-tsconfig-paths": "^4.3.2"
   },
   "packageManager": "yarn@4.5.0+sha512.837566d24eec14ec0f5f1411adb544e892b3454255e61fdef8fd05f3429480102806bac7446bc9daff3896b01ae4b62d00096c7e989f1596f2af10b927532f39"
