--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
     "redux": "5.0.1",
+    "redux-persist": "6.0.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss": "^3.4.4",
@@ -48,6 +49,7 @@
     "@types/qs": "^6.9.15",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/redux-persist": "4.0.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
