#18 [feat] 소셜 로그인 구현

--- a/.env
+++ b/.env
@@ -1,12 +1,14 @@
-VITE_KAKAO_REST_API_KEY="312e1dbfd6c9865411b34bbef5a68b9b"
-VITE_KAKAO_REDIRECT_URI="http://localhost:5175/oauth"
-VITE_KAKAO_NATIVE_APP_KEY="fb9c95700a4b32826fe4b00966b42c60"
-VITE_GOOGLE_CLIENT_ID="600910180647-2qcqdfu4091qllm9u30amt34f5kvuc45.apps.googleusercontent.com"
-VITE_GOOGLE_SECRET_KEY="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"
-VITE_GOOGLE_SIGNUP_REDIRECT_URI="http://localhost:5175/signup/oauth/google"
-VITE_GOOGLE_LOGIN_REDIRECT_URI="http://localhost:5175/login/oauth/google"
-VITE_GOOGLE_REDIRECT_URI="http://localhost:5175"
-VITE_APPLE_CLIENT_ID="app.mentorbus.mentorbus"
-VITE_APPLE_REDIRECT_URI="https://mentorbus.app/apple/auth"
-PUBLIC_URL="/"
-VITE_API_URL="http://localhost:5002"
+# VITE_KAKAO_REST_API_KEY="312e1dbfd6c9865411b34bbef5a68b9b"
+# VITE_KAKAO_REDIRECT_URI="http://localhost:5175/oauth"
+# VITE_KAKAO_NATIVE_APP_KEY="fb9c95700a4b32826fe4b00966b42c60"
+# VITE_GOOGLE_CLIENT_ID="600910180647-2qcqdfu4091qllm9u30amt34f5kvuc45.apps.googleusercontent.com"
+# VITE_GOOGLE_SECRET_KEY="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"
+# VITE_GOOGLE_SIGNUP_REDIRECT_URI="http://localhost:5175/signup/oauth/google"
+# VITE_GOOGLE_LOGIN_REDIRECT_URI="http://localhost:5175/login/oauth/google"
+# VITE_GOOGLE_REDIRECT_URI="http://localhost:5175"
+# VITE_APPLE_CLIENT_ID="app.mentorbus.mentorbus"
+# VITE_APPLE_REDIRECT_URI="https://mentorbus.app/apple/auth"
+# PUBLIC_URL="/"
+# VITE_API_URL="http://localhost:5002"
+
+VITE_BACKEND_URL="123"
