--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.1.1",
     "cookies-next": "^5.1.0",
     "endpoint-client": "^0.1.1",
+    "firebase": "^11.4.0",
     "next-themes": "^0.3.0",
     "path": "^0.12.7",
     "postcss": "^8.4.39",
