--- a/.gitignore
+++ b/.gitignore
@@ -25,4 +25,8 @@ dist-ssr
 
 # dotenv environment variable files
 .env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
 **/.env
